# apicurl

./: .gitignore  LICENSE  cleanup_dirs.sh  createGraph.py  create_dirs.sh  issue.md  llms.json  main.py  pyproject.toml  pytest.ini  repo-description.txt  setup.cfg
apiCurl/: __main__.py  fetch_process_collection.py  user_auth.py
apicurl/: .env  __init__.py  __main__.py  fetch_process_collection.py  user_auth.py
data/: Collection.json  testCollection.json
gpt-4-0125-preview/: create_patch_string.md  create_patch_string.patch  generate_code_snippets_for_changes.md  prompt-iteration-0-task-0.md  prompt-iteration-0-task-1.md
gpt-4-0125-preview/issue_050101/: create_patch_string.md  create_patch_string.patch  generate_code_snippets_for_changes.md  prompt-iteration-0-task-0.md  prompt-iteration-0-task-1.md
gpt-4/issue_042501/: create_patch_string.md  create_patch_string.patch  detect_lines_to_be_changed_in_files.md  generate_code_snippets_for_changes.md  list_files_to_be_changed.md  prompt-0.md  prompt-1.md  prompt-2.md  prompt-3.md
gpt-4/issue_042502/: create_patch_string.md  create_patch_string.patch  detect_lines_to_be_changed_in_files.md  prompt-0.md  (+5 more)
issues/: issue_042501.md  issue_ErrorHandling.md  issue_ML.md  issue_artistOverview.md  issue_checkSecurity.md  issue_codeReview.md  issue_dataEngineering.md  issue_dataFilter.md  issue_scabilityDeployment.md  issue_stage3_dataProcessing.md  issue_visualFeat.md
nocurl/: __main__.py  fetch_process_collection.py
test/: ML_test.py  artistOverview_test.py  artist_overview_test.py  checkSecurity_test.py  codeReview_test.py  dataEngineering_test.py  dataFilter_test.py  errorHandling_test.py  featureJSON_test.py  fetch_process_collection_test.py  scalabilityDeployment_test.py  test_fetch_process_collection.py  user_auth_test.py  visualFeat_test.py
tests/: dataProc_tests.py  fetchProcessCollection_test.py  fetchProcessCollection_tests.py  my_test.py  userAuth_test.py  userAuth_tests.py  validation_tests.py
(+63 files in other folders)
