[tool.poetry]
name = "apicurl"
version = "0.1.0"
description = "This code is a dummy base for applying the SEGym Framework for advancing in research regarding the usage of LLMs and evaluating their effectiveness in Software Engineering"
authors = ["Tim Buecher <tim.buecher@campus.lmu.de>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
logging = "^0.4.9.6"
pyfiglet = "^1.0.2"
readchar = "^4.0.6"
pandas = "^2.2.2"
requests = "^2.31.0"
ollama = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
