[tool.poetry]
name = "apicurl"
version = "0.1.0"
description = "This code is a dummy base for applying the SEGym Framework for advancing in research regarding the usage of LLMs and evaluating their effectiveness in Software Engineering"
authors = ["Tim Buecher <tim.buecher@campus.lmu.de>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pyfiglet = "^1.0.2"
readchar = "^4.0.6"
requests-mock = "^1.12.1"
app = "^0.0.1"
setuptools = "^70.1.0"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
