[metadata]
name = apiCurl
version = 0.0.1
author = Tim Bücher
author_email = tim.buecher@campus.lmu.de
description = A simple app to curl information from two APIs and combine data based on kyrillschmids python_env
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    apicurl = apicurl.__main__:main